src/zenoh_dart.h

// ---------------------------------------------------------------------------
// Queryable
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_queryable_t in bytes.
FFI_PLUGIN_EXPORT int32_t zd_queryable_sizeof(void);
/// Declares a queryable on the given key expression.
///
/// Incoming queries are posted to the Dart isolate via the given native port.
/// The query's key expression rides the message as a length-carried
/// `Uint8List`, so an interior NUL survives; the selector `parameters` beside
/// it are still a C string.
///
/// @param queryable_out  Pointer to an uninitialized z_owned_queryable_t.
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param key_expr       Const pointer to the loaned key expression, already
///                       validated Dart-side.
/// @param port           The Dart native port to post queries to.
/// @param complete       Whether this queryable is complete (1) or not (0).
/// @return 0 on success, negative on failure.
/// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
///                        this declaration accepts, or -1 to leave canon's
///                        default (ANY).
FFI_PLUGIN_EXPORT int8_t zd_declare_queryable(
    uint8_t* queryable_out,
    const uint8_t* session,
    const z_loaned_keyexpr_t* key_expr,
    int64_t port,
    int8_t complete,
    int allowed_origin);
// ---------------------------------------------------------------------------
// Query channels (bounded fifo/ring delivery on the queryable path)
// ---------------------------------------------------------------------------

/// Returns the size of the owned query handler for `kind`, in bytes.
FFI_PLUGIN_EXPORT int32_t zd_query_handler_sizeof(int32_t kind);
/// Declares a queryable whose queries land in a BOUNDED CHANNEL.
///
/// The channel-mode sibling of zd_declare_queryable. Both fill canon's
/// `z_queryable_options_t` through one shared body, so their option surfaces
/// cannot drift; they differ only in which closure canon receives.
///
/// Unlike a reply channel, this one lives until the queryable is undeclared or
/// its session closes — canon's own words for the recv contract — so releasing
/// the handle is REMOTE-VISIBLE.
///
/// @param queryable_out  Caller-allocated `zd_queryable_sizeof()` buffer.
/// @param handler_out    Caller-allocated `zd_query_handler_sizeof(kind)`
///                       buffer, written with the owned handler on success.
/// @param tee_out        Out-param for the SHIM-owned readiness-tee context,
///                       released through the shared `zd_pull_tee_drop`. NULL
///                       on every failure path.
/// @param dart_port      Dart NativePort the tee posts readiness pings to.
/// @param kind           0 = ring (lossy, drop-oldest), 1 = fifo (lossless,
///                       producer-backpressured).
/// @param capacity       Channel capacity, carried full width.
/// @return 0 on success.
///         **10** (`ZD_DECLARE_ECAPACITY`) — capacity outside canon's domain;
///           nothing was allocated.
///         **11** (`ZD_DECLARE_EALLOC`) — the readiness-tee context could not be
///           claimed.
///         negative — canon's own code, passed through unchanged.
FFI_PLUGIN_EXPORT int8_t zd_declare_queryable_channel(
    uint8_t* queryable_out, uint8_t* handler_out, uint8_t** tee_out,
    int64_t dart_port,
    const uint8_t* session, const z_loaned_keyexpr_t* key_expr,
    int32_t kind, int64_t capacity, int8_t complete, int allowed_origin);
// ---------------------------------------------------------------------------
// Pull Subscriber (ring and fifo sample channels)
// ---------------------------------------------------------------------------

/// Channel kind, as it crosses the FFI seam.
///
/// ⚠️ THESE VALUES ARE THE SHIM'S DISPATCH CODES, NOT CANON'S. Canon has no
/// channel-kind enum: it ships two separately-named constructor pairs over two
/// distinct handler types, and the kind is chosen by which symbol you call.
/// Dart cannot select a C symbol at run time across the seam, so the kind
/// crosses as an int and every pull entry below dispatches on it.
///
/// The set is CLOSED and originates only in our own `ChannelKind` enum, never
/// in remote input. Any value that is not 1 is treated as ring.
///
///   0 = ring -- bounded and LOSSY. Drops the oldest entry when full; never
///       blocks the producer. Discards its buffer when the producer dies.
///   1 = fifo -- bounded and LOSSLESS. Blocks the producer when full;
///       drains its buffer before reporting disconnected.

/// Returns the size in bytes of the owned handler slot for `kind`.
///
/// The two handler types are distinct, so the caller must allocate the slot
/// for the kind it is about to declare and release it through
/// `zd_pull_handler_drop` with the SAME kind.
///
/// @param kind  0 = ring, 1 = fifo (see above).
/// @return The slot size in bytes. Cannot fail.
FFI_PLUGIN_EXPORT int32_t zd_pull_handler_sizeof(int32_t kind);
/// Declares a pull subscriber backed by a bounded channel of `kind`.
///
/// RETURN CODE CONTRACT -- the channel is SPLIT, and the split is deliberate:
///
///   0            success.
///   POSITIVE     SHIM-ORIGINATED. Canon never returns a positive here.
///                  10 = capacity out of range (negative, or larger than this
///                       target's `size_t`). Nothing was allocated.
///                  11 = an allocation the shim itself needed failed. LIVE:
///                       this entry claims the readiness-tee context, and this
///                       is the code its malloc failure returns. (The comment
///                       that used to sit here still called it RESERVED and
///                       "reachable when the readiness-tee context lands" --
///                       the tee landed in the same change that wrote the code,
///                       so the line described a state that never shipped.)
///   NEGATIVE     CANON'S OWN, passed through unchanged (e.g. `Z_EINVAL -1`,
///                `Z_EPARSE -2` from `z_declare_subscriber`).
///
/// Why the shim's codes are positive rather than the usual -1: canon OWNS the
/// negative space on this channel and actively uses it, so a shim-owned -1
/// would squat on a live canon code and let a canon EINVAL masquerade as our
/// allocation failure. That is an rc-conflation -- the same defect class as
/// collapsing distinct channel states onto one value -- and it is barred.
/// Low positives 1 and 2 stay reserved repo-wide for canon's channel-state
/// meanings, which is why shim-originated call failures start at 10.
///
/// CAPACITY is validated before anything is allocated and is never silently
/// transformed. Canon documents nothing about capacity and its constructor
/// returns void -- it cannot fail and cannot reject a value -- so every domain
/// check that exists at all exists here. Capacity 0 is IN canon's domain and
/// is passed through (measured working on both kinds at 1.8.0, not promised by
/// canon).
///
/// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
/// @param handler_out     Pointer to an uninitialized owned handler slot of
///                        `kind`, sized by `zd_pull_handler_sizeof(kind)`.
/// @param tee_out         Out: the readiness-tee context this call allocates,
///                        or NULL on any failure. SHIM-OWNED: release it with
///                        `zd_pull_tee_drop`, and only AFTER dropping the
///                        subscriber.
/// @param session         Const pointer to a loaned session (as uint8_t*).
/// @param key_expr        Const pointer to the loaned key expression, already
///                        validated Dart-side.
/// @param kind            0 = ring, 1 = fifo.
/// @param capacity        Channel capacity. Carried full-width so no value a
///                        caller can express is truncated on the way in.
/// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
///                        this declaration accepts, or -1 to leave canon's
///                        default (ANY).
/// @param dart_port       NativePort the readiness tee posts to: an int64 `1`
///                        when an armed waiter should look again, and a null
///                        sentinel from the closure's drop when the producer
///                        is gone.
/// @return 0, a shim-originated positive, or canon's own negative (above).
FFI_PLUGIN_EXPORT int8_t zd_declare_pull_subscriber(
    uint8_t* subscriber_out, uint8_t* handler_out, uint8_t** tee_out,
    const uint8_t* session, const z_loaned_keyexpr_t* key_expr,
    int32_t kind, int64_t capacity,
    int allowed_origin, int64_t dart_port);
/// Frees the readiness-tee context. The DESIGNATED release point.
///
/// ⚠️ Call it only AFTER `zd_subscriber_drop`, which zenoh-c 1.8.0 (#1221)
/// guarantees blocks until executing callbacks are destroyed. The closure's
/// own drop callback deliberately does NOT free this block: it fires whenever
/// the SESSION dies, which can happen while a live Dart handle may still call
/// `zd_pull_tee_arm`. Separating the free from the drop is what makes that
/// ordering safe rather than a use-after-free.
///
/// @param tee  The context from `zd_declare_pull_subscriber`.
FFI_PLUGIN_EXPORT void zd_pull_tee_drop(uint8_t* tee);
/// Declares a querier on the given key expression.
///
/// @param querier_out    Pointer to uninitialized z_owned_querier_t (as uint8_t*).
/// @param session        Pointer to a loaned session (as uint8_t*).
/// @param key_expr       Null-terminated key expression string.
/// @param target         Query target (z_query_target_t value).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param timeout_ms     Timeout in milliseconds (0 = default).
/// @return 0 on success, negative on failure.
/// @param congestion_control  Congestion control strategy, or -1 to leave
///                       canon's own default. NOTE: querier is a REQUEST path,
///                       so canon's default is DEFAULT_REQUEST = BLOCK.
/// @param priority       Priority 1..7, or -1 to leave canon's default (data=5).
/// @param is_express     1/0 to set express mode, or -1 to leave canon's
///                       default (false).
/// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
///                       default (ANY).
/// @param accept_replies z_reply_keyexpr_t 0..1, or -1 to leave canon's
///                       default (MATCHING_QUERY = 1).
///
/// All five are DECLARATION-time: canon's z_querier_get_options_t carries no
/// QoS, locality or accept-replies field, so there is no per-call form.
FFI_PLUGIN_EXPORT int8_t zd_declare_querier(
    uint8_t* querier_out, const uint8_t* session,
    const z_loaned_keyexpr_t* key_expr, int8_t target,
    int8_t consolidation, uint64_t timeout_ms,
    int congestion_control, int priority, int8_t is_express,
    int allowed_destination, int accept_replies);