package/lib/src/bindings.dart


  /// Declares a pull subscriber backed by a bounded channel of `kind`.
  ///
  /// RETURN CODE CONTRACT -- the channel is SPLIT, and the split is deliberate:
  ///
  /// 0            success.
  /// POSITIVE     SHIM-ORIGINATED. Canon never returns a positive here.
  /// 10 = capacity out of range (negative, or larger than this
  /// target's `size_t`). Nothing was allocated.
  /// 11 = an allocation the shim itself needed failed. LIVE:
  /// this entry claims the readiness-tee context, and this
  /// is the code its malloc failure returns. (The comment
  /// that used to sit here still called it RESERVED and
  /// "reachable when the readiness-tee context lands" --
  /// the tee landed in the same change that wrote the code,
  /// so the line described a state that never shipped.)
  /// NEGATIVE     CANON'S OWN, passed through unchanged (e.g. `Z_EINVAL -1`,
  /// `Z_EPARSE -2` from `z_declare_subscriber`).
  ///
  /// Why the shim's codes are positive rather than the usual -1: canon OWNS the
  /// negative space on this channel and actively uses it, so a shim-owned -1
  /// would squat on a live canon code and let a canon EINVAL masquerade as our
  /// allocation failure. That is an rc-conflation -- the same defect class as
  /// collapsing distinct channel states onto one value -- and it is barred.
  /// Low positives 1 and 2 stay reserved repo-wide for canon's channel-state
  /// meanings, which is why shim-originated call failures start at 10.
  ///
  /// CAPACITY is validated before anything is allocated and is never silently
  /// transformed. Canon documents nothing about capacity and its constructor
  /// returns void -- it cannot fail and cannot reject a value -- so every domain
  /// check that exists at all exists here. Capacity 0 is IN canon's domain and
  /// is passed through (measured working on both kinds at 1.8.0, not promised by
  /// canon).
  ///
  /// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
  /// @param handler_out     Pointer to an uninitialized owned handler slot of
  /// `kind`, sized by `zd_pull_handler_sizeof(kind)`.
  /// @param tee_out         Out: the readiness-tee context this call allocates,
  /// or NULL on any failure. SHIM-OWNED: release it with
  /// `zd_pull_tee_drop`, and only AFTER dropping the
  /// subscriber.
  /// @param session         Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr        Const pointer to the loaned key expression, already
  /// validated Dart-side.
  /// @param kind            0 = ring, 1 = fifo.
  /// @param capacity        Channel capacity. Carried full-width so no value a
  /// caller can express is truncated on the way in.
  /// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
  /// this declaration accepts, or -1 to leave canon's
  /// default (ANY).
  /// @param dart_port       NativePort the readiness tee posts to: an int64 `1`
  /// when an armed waiter should look again, and a null
  /// sentinel from the closure's drop when the producer
  /// is gone.
  /// @return 0, a shim-originated positive, or canon's own negative (above).
  int zd_declare_pull_subscriber(
    ffi.Pointer<ffi.Uint8> subscriber_out,
    ffi.Pointer<ffi.Uint8> handler_out,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> tee_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int kind,
    int capacity,
    int allowed_origin,
    int dart_port,
  ) {
    return _zd_declare_pull_subscriber(
      subscriber_out,
      handler_out,
      tee_out,
      session,
      key_expr,
      kind,
      capacity,
      allowed_origin,
      dart_port,
    );
  }

  late final _zd_declare_pull_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int32,
            ffi.Int64,
            ffi.Int,
            ffi.Int64,
          )
        >
      >('zd_declare_pull_subscriber');
  late final _zd_declare_pull_subscriber = _zd_declare_pull_subscriberPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
          int,
        )
      >();

  /// Declares a querier on the given key expression.
  ///
  /// @param querier_out    Pointer to uninitialized z_owned_querier_t (as uint8_t*).
  /// @param session        Pointer to a loaned session (as uint8_t*).
  /// @param key_expr       Null-terminated key expression string.
  /// @param target         Query target (z_query_target_t value).
  /// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
  /// @param timeout_ms     Timeout in milliseconds (0 = default).
  /// @return 0 on success, negative on failure.
  /// @param congestion_control  Congestion control strategy, or -1 to leave
  /// canon's own default. NOTE: querier is a REQUEST path,
  /// so canon's default is DEFAULT_REQUEST = BLOCK.
  /// @param priority       Priority 1..7, or -1 to leave canon's default (data=5).
  /// @param is_express     1/0 to set express mode, or -1 to leave canon's
  /// default (false).
  /// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
  /// default (ANY).
  /// @param accept_replies z_reply_keyexpr_t 0..1, or -1 to leave canon's
  /// default (MATCHING_QUERY = 1).
  ///
  /// All five are DECLARATION-time: canon's z_querier_get_options_t carries no
  /// QoS, locality or accept-replies field, so there is no per-call form.
  int zd_declare_querier(
    ffi.Pointer<ffi.Uint8> querier_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int target,
    int consolidation,
    int timeout_ms,
    int congestion_control,
    int priority,
    int is_express,
    int allowed_destination,
    int accept_replies,
  ) {
    return _zd_declare_querier(
      querier_out,
      session,
      key_expr,
      target,
      consolidation,
      timeout_ms,
      congestion_control,
      priority,
      is_express,
      allowed_destination,
      accept_replies,
    );
  }

  late final _zd_declare_querierPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int8,
            ffi.Int8,
            ffi.Uint64,
            ffi.Int,
            ffi.Int,
            ffi.Int8,
            ffi.Int,
            ffi.Int,
          )
        >
      >('zd_declare_querier');
  late final _zd_declare_querier = _zd_declare_querierPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  /// Declares a queryable on the given key expression.
  ///
  /// Incoming queries are posted to the Dart isolate via the given native port.
  /// The query's key expression rides the message as a length-carried
  /// `Uint8List`, so an interior NUL survives; the selector `parameters` beside
  /// it are still a C string.
  ///
  /// @param queryable_out  Pointer to an uninitialized z_owned_queryable_t.
  /// @param session        Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr       Const pointer to the loaned key expression, already
  /// validated Dart-side.
  /// @param port           The Dart native port to post queries to.
  /// @param complete       Whether this queryable is complete (1) or not (0).
  /// @return 0 on success, negative on failure.
  /// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
  /// this declaration accepts, or -1 to leave canon's
  /// default (ANY).
  int zd_declare_queryable(
    ffi.Pointer<ffi.Uint8> queryable_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int port,
    int complete,
    int allowed_origin,
  ) {
    return _zd_declare_queryable(
      queryable_out,
      session,
      key_expr,
      port,
      complete,
      allowed_origin,
    );
  }

  late final _zd_declare_queryablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Int8,
            ffi.Int,
          )
        >
      >('zd_declare_queryable');
  late final _zd_declare_queryable = _zd_declare_queryablePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
        )
      >();

  /// Declares a queryable whose queries land in a BOUNDED CHANNEL.
  ///
  /// The channel-mode sibling of zd_declare_queryable. Both fill canon's
  /// `z_queryable_options_t` through one shared body, so their option surfaces
  /// cannot drift; they differ only in which closure canon receives.
  ///
  /// Unlike a reply channel, this one lives until the queryable is undeclared or
  /// its session closes — canon's own words for the recv contract — so releasing
  /// the handle is REMOTE-VISIBLE.
  ///
  /// @param queryable_out  Caller-allocated `zd_queryable_sizeof()` buffer.
  /// @param handler_out    Caller-allocated `zd_query_handler_sizeof(kind)`
  /// buffer, written with the owned handler on success.
  /// @param tee_out        Out-param for the SHIM-owned readiness-tee context,
  /// released through the shared `zd_pull_tee_drop`. NULL
  /// on every failure path.
  /// @param dart_port      Dart NativePort the tee posts readiness pings to.
  /// @param kind           0 = ring (lossy, drop-oldest), 1 = fifo (lossless,
  /// producer-backpressured).
  /// @param capacity       Channel capacity, carried full width.
  /// @return 0 on success.
  /// **10** (`ZD_DECLARE_ECAPACITY`) — capacity outside canon's domain;
  /// nothing was allocated.
  /// **11** (`ZD_DECLARE_EALLOC`) — the readiness-tee context could not be
  /// claimed.
  /// negative — canon's own code, passed through unchanged.
  int zd_declare_queryable_channel(
    ffi.Pointer<ffi.Uint8> queryable_out,
    ffi.Pointer<ffi.Uint8> handler_out,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> tee_out,
    int dart_port,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int kind,
    int capacity,
    int complete,
    int allowed_origin,
  ) {
    return _zd_declare_queryable_channel(
      queryable_out,
      handler_out,
      tee_out,
      dart_port,
      session,
      key_expr,
      kind,
      capacity,
      complete,
      allowed_origin,
    );
  }

  late final _zd_declare_queryable_channelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Int64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int32,
            ffi.Int64,
            ffi.Int8,
            ffi.Int,
          )
        >
      >('zd_declare_queryable_channel');
  late final _zd_declare_queryable_channel = _zd_declare_queryable_channelPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
          int,
        )
      >();
